testcases/pos/type/valdecl_annotated_pure_type.bard
let val x: Int = 10
in
    x + 7
end
