testcases/neg/eval_type/raise_on_receive_fetch_secret.bard
let val x = receive: Int
    val y = receive: Int
in
    send y
end
